--- a/src/css/header.css
+++ b/src/css/header.css
@@ -39,6 +39,7 @@ position: relative;
     display: block;
     width: 0;
     padding-top: 0;
+    z-index: 200000;
         
     border-radius: 100%;
 
@@ -54,7 +55,7 @@ position: relative;
 .btn:active:before {
     width: 120%;
     padding-top: 120%;
-
+    opacity: 0.1;
     transition: width .2s ease-out, padding-top .2s ease-out;
 }
 
