--- a/src/css/signup.css
+++ b/src/css/signup.css
@@ -37,7 +37,7 @@ div.login {
   }
 }
 
-input, rl {
+input {
 	display: block;
 	width: 100%;
 	margin-bottom: 15px;
@@ -59,7 +59,7 @@ input:focus + p {
 	display: block;
 }
 
-input[type="submit"], rl {
+input[type="submit"] {
 	border: none;
 	background-color: #268fff;
 	color: #fff;
@@ -78,22 +78,10 @@ input[type="submit"]:disabled {
 	opacity: 0.9;
 }
 
-input:valid ~ input:valid ~ input[type="submit"]:disabled {
+input:valid ~ input:valid ~ input:valid ~ input:valid ~ input:valid ~input[type="submit"]:disabled {
 	display: none;
 }
-input:valid ~ input:valid ~ input[type="submit"]:not(:disabled) {
+input:valid ~ input:valid ~ input:valid ~ input:valid ~ input:valid ~ input[type="submit"]:not(:disabled) {
 	display: block;
 	cursor: pointer;
-}
-
-rl { 
-  text-align: center;
-  display: block;
-  background-color: #ff2626
-
-}
-
-rl:hover {
-  background-color: #bd1b1b;
-  cursor: pointer;
 }
