--- a/src/css/header.css
+++ b/src/css/header.css
@@ -7,7 +7,7 @@
     overflow: hidden;
     border-width: 0;
     width: 100px;
-    
+    font-size: 16px;
     outline: none;
     border-radius: 2px;
     box-shadow: 0 1px 4px rgba(0, 0, 0, .6);
